--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages-list">
-          <li class="advantages-item advantages-item__town">
+          < class="advantages-item advantages-item__town">
             <h3 class="advantages-title">
               Настоящий городок
             </h3>
@@ -68,9 +68,7 @@
             <p class="advantages-description">
               Седона — не аттракцион для туристов, там течёт своя жизнь
             </p>
-          </li>
-          <li class="advantages-image">
-            <img src="images/view.png" alt="Вид из окна" width="800" height="384">
+            <img class="advantages-image" src="images/view.png" alt="Вид из окна" width="800" height="384">
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">
