--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages-list">
-          < class="advantages-item advantages-item__town">
+          <li class="advantages-item advantages-item__town">
             <h3 class="advantages-title">
               Настоящий городок
             </h3>
@@ -93,9 +93,7 @@
             <p class="advantages-description">
               Не только китайского, но и настоящего местного производства!
             </p>
-          </li>
-          <li class="advantages-image">
-            <img src="images/bridge.png" alt="Мост дьявола" width="800" height="384">
+            <img class="advantages-image" src="images/bridge.png" alt="Мост дьявола" width="800" height="384">
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">
@@ -178,12 +176,10 @@
         <li class="footer-social-item">
           <a class="button" href="https://www.facebook.com/htmlacademy">
             <span class="visually-hidden">Фэйсбук</span>
-          </a>  
         </li>
         <li class="footer-social-item">
           <a class="button" href="https://www.youtube.com/c/HTMLAcademyRUS">
             <span class="visually-hidden">Ютуб</span>
-          </a>  
         </li>
       </ul>
     </section>
