:heavy_check_mark: Сборка #2

--- a/2/index.html
+++ b/2/index.html
@@ -58,7 +58,7 @@
     </section>
     <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="advantages-list">
+        <ol class="advantages-list">
           <li class="advantages-item advantages-item__town">
             <h3 class="advantages-title">
               Настоящий городок
@@ -69,38 +69,37 @@
             <p class="advantages-description">
               Седона — не аттракцион для туристов, там течёт своя жизнь
             </p>
+            <img class="advantages-image" src="images/view.png" alt="Вид из окна" width="800" height="384">
           </li>
-          <li class="advantages-image">
-            <img src="images/view.png" alt="Вид из окна" width="800" height="384">
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">
-              Жильё
-            </h3>
-            <p class="advantages-description">
-              Рекомендуем пожить в настоящем мотеле, всё как в кино!
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">
-              Еда
-            </h3>
-            <p class="advantages-description">
-              Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">
-              Сувениры
-            </h3>
-            <p class="advantages-description">
-              Не только китайского, но и настоящего местного производства!
-            </p>
-          </li>
-          <li class="advantages-image">
-            <img src="images/bridge.png" alt="Мост дьявола" width="800" height="384">
+              <ul class="advantages-sublist">
+                <li class="advantages-sublist-item advantages-sublist-item-house">
+                  <h3 class="advantages-title">
+                    Жильё
+                  </h3>
+                  <p class="advantages-description">
+                    Рекомендуем пожить в настоящем мотеле, всё как в кино!
+                  </p>
+                </li>
+                <li class="advantages-sublist-item advantages-sublist-item-food">
+                  <h3 class="advantages-title">
+                    Еда
+                  </h3>
+                  <p class="advantages-description">
+                    Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+                  </p>
+                </li>
+                <li class="advantages-sublist-item advantages-sublist-item-souvenir">
+                  <h3 class="advantages-title">
+                    Сувениры
+                  </h3>
+                  <p class="advantages-description">
+                    Не только китайского, но и настоящего местного производства!
+                  </p>
+                </li>
+              </ul>
           </li>
           <li class="advantages-item">
+            <img class="advantages-image" src="images/bridge.png" alt="Мост дьявола" width="800" height="384">
             <h3 class="advantages-title">
               Там есть мост дьявола
             </h3>
@@ -144,7 +143,7 @@
               Большинство едет в Гранд Каньон и толпится там
             </p>
           </li>
-        </ul>
+        </ol>
     </section>
     <section class="main-search">
         <h2 class="main-search-title">
@@ -197,8 +196,5 @@
      </a>
     </section>
   </footer>
-
-
-
   </body>
 </html>
