--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-  <header class="page-header">
+    <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
           <img class="page-header-logo" alt="Логотип гостиницы «SEDONA»" src="images/logohotelsedona.png">
@@ -33,167 +33,130 @@
             </a>
           </li>
           <li class="navigation-item">
-            <button class="navigation-link-button" type="button">Хочу сюда!</button>
+            <button class="navigation-link-button" type="button">
+              Хочу сюда!
+            </button>
           </li>
         </ul>
       </nav>
-  </header>
-  <main class="main-index">
-    <section class="main-top">
-      <h1 class="visually-hidden">
-        Седона
-      <h1>
-      <figure class="main-top-figure" >
-        <img class="figure-vector" src="image/welcome.png" alt="Слоган о «SEDONA»" width="458" height="352">
-      </figure>
-    </section>
-    <section class="main-description">
-        <h2>
-          Седона — небольшой городок в Аризоне, заслуживающий большего!
-        </h2>
-          <p>
-            Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
-         </p>
-    </section>
-    <section class="advantages">
+    </header>
+    <main class="main-index">
+      <section class="main-top">
+        <h1 class="visually-hidden">Седона</h1>
+        <span class="main-top-figure">
+          <img class="figure-vector" src="image/welcome.png" alt="Слоган о «SEDONA»" width="458" height="352">
+        </span>
+      </section>
+      <section class="main-description">
+        <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+      </section>
+      <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
-        <ol class="advantages-list">
+        <ul class="advantages-list">
           <li class="advantages-item advantages-item__town">
-            <h3 class="advantages-title">
-              Настоящий городок
-            </h3>
-            <p class="advantages-number">
-              — №1 —
-            </p>
+            <h3 class="advantages-title">Настоящий городок</h3>
+            <p class="advantages-number">— №1 —</p>
             <p class="advantages-description">
               Седона — не аттракцион для туристов, там течёт своя жизнь
             </p>
             <img class="advantages-image" src="images/view.png" alt="Вид из окна" width="800" height="384">
-          </li>
-              <ul class="advantages-sublist">
-                <li class="advantages-sublist-item advantages-sublist-item-house">
-                  <h3 class="advantages-title">
-                    Жильё
-                  </h3>
-                  <p class="advantages-description">
-                    Рекомендуем пожить в настоящем мотеле, всё как в кино!
-                  </p>
-                </li>
-                <li class="advantages-sublist-item advantages-sublist-item-food">
-                  <h3 class="advantages-title">
-                    Еда
-                  </h3>
-                  <p class="advantages-description">
-                    Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
-                  </p>
-                </li>
-                <li class="advantages-sublist-item advantages-sublist-item-souvenir">
-                  <h3 class="advantages-title">
-                    Сувениры
-                  </h3>
-                  <p class="advantages-description">
-                    Не только китайского, но и настоящего местного производства!
-                  </p>
-                </li>
-              </ul>
+            <div class="advantages-item-inside">
+              <h3 class="advantages-item-inside-title">Жильё</h3>
+              <p class="advantages-description">
+                Рекомендуем пожить в настоящем мотеле, всё как в кино!
+              </p>
+            </div>
+            <div class="advantages-item-inside-title">
+              <h3 class="">Еда</h3>
+              <p class="advantages-description">
+                Всегда заказывайте топовый фирменный бургер, вы не
+                разочаруетесь!
+              </p>
+            </div>
+            <div class="advantages-item-inside-souvenir">
+              <h3 class="advantages-item-inside-title">Сувениры</h3>
+              <p class="advantages-description">
+                Не только китайского, но и настоящего местного производства!
+              </p>
+            </div>
           </li>
           <li class="advantages-item">
             <img class="advantages-image" src="images/bridge.png" alt="Мост дьявола" width="800" height="384">
-            <h3 class="advantages-title">
-              Там есть мост дьявола
-            </h3>
-            <p class="advantages-number">
-              — №2 —
-            </p>
+            <h3 class="advantages-title">Там есть мост дьявола</h3>
+            <p class="advantages-number">— №2 —</p>
             <p class="advantages-description">
               Да, по нему можно пройти! Если вы осмелитесь, разумеется
             </p>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">
-              Небольшая площадь
-            </h3>
-            <p class="advantages-number">
-              — №3 —
-            </p>
+            <h3 class="advantages-title">Небольшая площадь</h3>
+            <p class="advantages-number">— №3 —</p>
             <p class="advantages-description">
               Все достопримечательности находятся очень близко
             </p>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">
-              Красивая дорога
-            </h3>
-            <p class="advantages-number">
-              — №4 —
-            </p>
+            <h3 class="advantages-title">Красивая дорога</h3>
+            <p class="advantages-number">— №4 —</p>
             <p class="advantages-description">
               Ехать в Седону из Лас-Вегаса совсем не скучно!
             </p>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">
-              Мало туристов
-            </h3>
-            <p class="advantages-number">
-              — №5 —
-            </p>
+            <h3 class="advantages-title">Мало туристов</h3>
+            <p class="advantages-number">— №5 —</p>
             <p class="advantages-description">
               Большинство едет в Гранд Каньон и толпится там
             </p>
           </li>
-        </ol>
-    </section>
-    <section class="main-search">
-        <h2 class="main-search-title">
-          Заинтересовались?
-        </h2>
+        </ul>
+      </section>
+      <section class="main-search">
+        <h2 class="main-search-title">Заинтересовались?</h2>
         <p class="main-search-suggestion">
-          Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне
+          Укажите предполагаемые даты поездки,и мы покажем вам лучшие
+          предложения гостиниц в Седоне
         </p>
-        <a class="button-search" href="#">
-          ПОИСК ГОСТИНИЦЫ В СЕДОНЕ
-        </a>
-    </section>
-    <section class="mailing">
-      <h2 class="mailing-title">
-        Подпишитесь на рассылку
-      </h2>
-      <p>
-        Только полезная информация и никакого спама,честное бойскаутское!
-      </p>
-      <form class="mailing-form">
-          <input class="field"  placeholder="Ваш e-mail" type="email" name="mailing-email">
+        <a class="button-search" href="#"> ПОИСК ГОСТИНИЦЫ В СЕДОНЕ </a>
+      </section>
+      <section class="mailing">
+        <h2 class="mailing-title">Подпишитесь на рассылку</h2>
+        <p>Только полезная информация и никакого спама,честное бойскаутское!</p>
+        <form class="mailing-form">
+          <input class="field" placeholder="Ваш e-mail" type="email" name="mailing-email">
           <input class="button mailing-button" type="submit" value="Подписаться">
         </form>
       </section>
-  </main>
-  <footer>
-    <section class="footer-social">
-      <ul>
-        <li class="footer-social-item">
-          <a class="button" href="https://twitter.com/htmlacademy_ru">
-            <span class="visually-hidden">Твиттер</span>
-          </a>
-        </li>
-        <li class="footer-social-item">
-          <a class="button" href="https://www.facebook.com/htmlacademy">
-            <span class="visually-hidden">Фэйсбук</span>
-        </li>
-        <li class="footer-social-item">
-          <a class="button" href="https://www.youtube.com/c/HTMLAcademyRUS">
-            <span class="visually-hidden">Ютуб</span>
-        </li>
-      </ul>
-    </section>
-    <section class="footer-contact">
-     <a class="footer-contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-    </section>
-    <section class="footer-logo">
-     <a class="footer-logo-address" href="https://htmlacademy.ru/">
-       <img class="footer-logo-image" src="images/logohtml.png " alt="Логотип HTML-Академии" width="114.9" height="32.9">
-     </a>
-    </section>
-  </footer>
+    </main>
+    <footer>
+      <section class="footer-social">
+        <ul>
+          <li class="footer-social-item">
+            <a class="button" href="https://twitter.com/htmlacademy_ru">
+              <span class="visually-hidden">Твиттер</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="https://www.facebook.com/htmlacademy">
+              <span class="visually-hidden">Фэйсбук</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="https://www.youtube.com/c/HTMLAcademyRUS">
+              <span class="visually-hidden">Ютуб</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="footer-contact">
+        <a class="footer-contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      </section>
+      <section class="footer-logo">
+        <a class="footer-logo-address" href="https://htmlacademy.ru/">
+          <img class="footer-logo-image" src="images/logohtml.png " alt="Логотип HTML-Академии" width="114.9" height="32.9">
+        </a>
+      </section>
+    </footer>
   </body>
 </html>
