исправляет названия классов

--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
                 Рекомендуем пожить в настоящем мотеле, всё как в кино!
               </p>
             </div>
-            <div class="advantages-item-inside-title">
-              <h3 class="">Еда</h3>
+            <div class="advantages-item-inside">
+              <h3 class="advantages-item-inside-title">Еда</h3>
               <p class="advantages-description">
                 Всегда заказывайте топовый фирменный бургер, вы не
                 разочаруетесь!
               </p>
             </div>
-            <div class="advantages-item-inside-souvenir">
+            <div class="advantages-item-inside">
               <h3 class="advantages-item-inside-title">Сувениры</h3>
               <p class="advantages-description">
                 Не только китайского, но и настоящего местного производства!
