--- a/catalog.html
+++ b/catalog.html
@@ -42,5 +42,34 @@
       </ul>
     </nav>
   </header>
+  <footer>
+    <section class="footer-social">
+      <ul>
+        <li class="footer-social-item">
+          <a class="button" href="https://twitter.com/htmlacademy_ru">
+            <span class="visually-hidden">Твиттер</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a class="button" href="https://www.facebook.com/htmlacademy">
+            <span class="visually-hidden">Фэйсбук</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a class="button" href="https://www.youtube.com/c/HTMLAcademyRUS">
+            <span class="visually-hidden">Ютуб</span>
+          </a>
+        </li>
+      </ul>
+    </section>
+    <section class="footer-contact">
+      <a class="footer-contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+    </section>
+    <section class="footer-logo">
+      <a class="footer-logo-address" href="https://htmlacademy.ru/">
+        <img class="footer-logo-image" src="images/logohtml.png " alt="Логотип HTML-Академии" width="114.9" height="32.9">
+      </a>
+    </section>
+  </footer>
 </body>
 </html>
