добавляет секцию "catalog-mailing"

--- a/catalog.html
+++ b/catalog.html
@@ -42,6 +42,17 @@
       </ul>
     </nav>
   </header>
+  <main class="main-inner">
+
+  </main>
+  <section class="catalog-mailing">
+    <h2 class="catalog-mailing-title">Подпишитесь на рассылку</h2>
+    <p>Только полезная информация и никакого спама,честное бойскаутское!</p>
+    <form class="mailing-form">
+      <input class="field" placeholder="Ваш e-mail" type="email" name="mailing-email">
+      <input class="button mailing-button" type="submit" value="Подписаться">
+    </form>
+  </section>
   <footer>
     <section class="footer-social">
       <ul>
