--- a/catalog.html
+++ b/catalog.html
@@ -63,7 +63,7 @@
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="checkbox"name="swimming-pool" checked>
+                    <input class="control-input" type="checkbox" name="swimming-pool" checked>
                       <span class="control-mark"></span>
                       <span class="control-label">Бассейн</span>
                   </label>
@@ -110,7 +110,166 @@
                 </li>
               </ul>
           </fieldset>
+          <fieldset class="catalog-filter-group">
+            <legend class="catalog-filter-title">Стоимость,&#8381;:</legend>
+              <div class="range">
+                <div class="range-wrapper-inputs">
+                  <label class="catalog-filter-label">
+                    <input class="catalog-filter-input" type="number" name="min-price" value="0">от
+                  </label>
+                  <label class="catalog-filter-label">
+                    <input class="catalog-filter-input" type="number" name="max-price" value="9000">до
+                  </label>
+                </div>
+              </div>
+          </fieldset>
+          <div class="catalog-filter-buttons">
+            <button class="button apply-button" type="submit">ПРИМЕНИТЬ</button>
+            <button class="button reset-button" type="reset">Сбросить</button>
+          </div>
+        </form>
     </header>
+    </section>
+    <section class="sorting">
+      <h2 class="sorting-title">
+        Найдено гостиниц:38
+      </h2>
+      <form class="sorting-type">
+        <select class="sorting-select-control" aria-label="Сортировка">
+          <option value="cheap">Сначала дешевые</option>
+          <option value="popular">Сначала популярные</option>
+          <option value="expensive">Сначала дорогие</option>
+        </select>
+      </form>
+      <ul class="sorting-search-result">
+        <li class="sorting-search-result-item">
+          <a href="#" class="button sorting-search-button sorting-search-button-current mode-tile">
+            <span class="visually-hidden">Показать карточки</span>
+          </a>
+        </li>
+        <li class="display-search-result-item">
+          <a href="#" class="button  sorting-search-button mode-slideshow">
+            <span class="visually-hidden">Показать слайды</span>
+          </a>
+        </li>
+        <li class="display-search-result-item">
+          <a href="#" class="button sorting-search-button  mode-list">
+            <span class="visually-hidden">Показать список</span>
+          </a>
+        </li>
+      </ul>
+      <ul class="hotel-list">
+        <li class="hotel-card">
+          <a href="#" class="hotel-image-container">
+            <img class="hotel-card-image" src="images/hotel-1.jpg" width="180" height="120"
+              alt="Amara Resort & Spa Гостиница.">
+          </a>
+          <div class="hotel-card-content-container">
+            <a class="hotel-card-title" href="#">Amara Resort &amp;Spa</a>
+            <div class="hotel-type-price-container">
+              <span class="hotel-type">Гостиница</span>
+              <span class="hotel-price">От4000 &#8381;</span>
+              <a href="#" class="button hotel-detail-button">ПОДРОБНЕЕ</a>
+              <a href="#" class="button add-to-favorites-button">В избранное</a>
+            </div>
+          </div>
+          <div class="hotel-card-rating-container">
+            <span class="rating-stars four-stars"><span class="visually-hidden">Звездность отеля</span></span>
+            <p class="rating">РЕЙТИНГ: 8,5</p>
+          </div>
+        </li>
+        <li class="hotel-card">
+          <a href="#" class="hotel-image-container">
+            <img class="hotel-card-image" src="images/hotel-2.jpg" width="180" height="120"
+              alt="Desert Quail Inn Гостиница.">
+          </a>
+          <div class="hotel-card-content-container">
+            <a class="hotel-card-title" href="#">Desert Quail Inn</a>
+            <div class="hotel-type-price-container">
+              <span class="hotel-type">Гостиница</span>
+              <span class="hotel-price">От3000 &#8381;</span>
+              <a href="#" class="button hotel-detail-button">ПОДРОБНЕЕ</a>
+              <a href="#" class="button add-to-favorites-button">В избранное</a>
+            </div>
+          </div>
+          <div class="hotel-card-rating-container">
+            <span class="rating-stars three-stars"><span class="visually-hidden">Звездность отеля</span></span>
+            <p class="rating">РЕЙТИНГ: 8,9</p>
+          </div>
+        </li>
+        <li class="hotel-card">
+          <a href="#" class="hotel-image-container">
+            <img class="hotel-card-image" src="images/hotel-3.jpg" width="180" height="120"
+              alt="Villas at Poco Diablo Апартаменты.">
+          </a>
+          <div class="hotel-card-content-container">
+            <a class="hotel-card-title" href="#">Villas at Poco Diablo</a>
+            <div class="hotel-type-price-container">
+              <span class="hotel-type">Гостиница</span>
+              <span class="hotel-price">От 2000 &#8381;</span>
+              <a href="#" class="button hotel-detail-button">ПОДРОБНЕЕ</a>
+              <a href="#" class="button add-to-favorites-button in-favorites">В ИЗБРАННОМ</a>
+            </div>
+          </div>
+          <div class="hotel-card-rating-container">
+            <span class="rating-stars two-stars"><span class="visually-hidden">Звездность отеля</span></span>
+            <p class="rating">РЕЙТИНГ: 9,2</p>
+          </div>
+        </li>
+        <li class="hotel-card">
+          <a href="#" class="hotel-image-container">
+            <img class="hotel-card-image" src="images/hotel-4.jpg" width="180" height="120"
+              alt="GreenTree Inn Гостиница.">
+          </a>
+          <div class="hotel-card-content-container">
+            <a class="hotel-card-title" href="#">GreenTree Inn</a>
+            <div class="hotel-type-price-container">
+              <span class="hotel-type">Гостиница</span>
+              <span class="hotel-price">От 3000 &#8381;</span>
+              <a href="#" class="button hotel-detail-button">ПОДРОБНЕЕ</a>
+              <a href="#" class="button add-to-favorites-button">В избранное</a>
+            </div>
+          </div>
+          <div class="hotel-card-rating-container">
+            <span class="rating-stars two-stars"><span class="visually-hidden">Звездность отеля</span></span>
+            <p class="rating">РЕЙТИНГ: 9,2</p>
+          </div>
+        </li>
+      </ul>
+      <div class="hotel-list-button">
+        <button class="hotel-list-pages">Загрузить еще</button>
+      </div>
+    </section>
+    <section class="pagination">
+      <h2 class="visually-hidden">Навигация по страницам</h2>
+      <ul class="pagination-list">
+        <li class="pagination-item">
+          <a  class="pagination-link pagination-current" href="#">1</a>
+        </li>
+        <li class="pagination-item">
+          <a class="pagination-link" href="#">2</a>
+        </li>
+        <li class="pagination-item">
+          <a class="pagination-link" href="#">3</a>
+        </li>
+        <li class="pagination-item">
+          <a class="pagination-link" href="#">4</a>
+        </li>
+        <li class="pagination-item">
+          <a class="pagination-link refs-more" href="#">&hellip;</a>
+        </li>
+        <li class="pagination-item">
+          <a class="pagination-link" href="#">10</a>
+        </li>
+      </ul>
+      <form class="pagination-select" action="https://echo.htmlacademy.ru/" method="post">
+        <p class="hotels-footer">
+          Гостиниц на странице:
+        </p>
+        <select class="select-control select-pages" name="sorting-list">
+          <option value="4">4</option>
+        </select>
+      </form>
     </section>
   </main>
   <section class="catalog-mailing">
