--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
-          <img class="page-header-logo" alt="Логотип гостиницы «SEDONA»" src="images/logohotelsedona.png">
+          <img class="page-header-logo" alt="Логотип гостиницы «SEDONA»" src="images/logohotelsedona.svg" width="138" height="70">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
