--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <div class="container">
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
@@ -45,10 +49,12 @@
     </header>
     <main class="main-index">
       <section class="main-top">
-        <h1 class="visually-hidden">Седона</h1>
-        <span class="main-top-figure">
-          <img class="figure-vector" src="images/welcome.svg"  width="458" height="352" alt="Слоган о «SEDONA»">
-        </span>
+        <div class="wrap-figure">
+            <h1 class="visually-hidden">Седона</h1>
+           <span class="main-top-figure">
+              <img class="figure-vector" src="images/welcome.svg"  width="458" height="352" alt="Слоган о «SEDONA»">
+           </span>
+        </div>
       </section>
       <section class="main-description">
         <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
@@ -58,7 +64,7 @@
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages-list">
           <li class="advantages-item advantages-item__town">
-            <h3 class="advantages-title">Настоящий городок</h3>
+            <h3 class="advantages-title advantages-title-township">Настоящий городок</h3>
             <p class="advantages-number">— №1 —</p>
             <p class="advantages-description">
               Седона — не аттракцион для туристов, там течёт своя жизнь
@@ -86,7 +92,7 @@
           </li>
           <li class="advantages-item">
             <img class="advantages-image" src="images/devil-bridge.jpg"  width="800" height="384" alt="Мост дьявола">
-            <h3 class="advantages-title">Там есть мост дьявола</h3>
+            <h3 class="advantages-title advantages-title-risk ">Там есть мост дьявола</h3>
             <p class="advantages-number">— №2 —</p>
             <p class="advantages-description">
               Да, по нему можно пройти! Если вы осмелитесь, разумеется
@@ -164,5 +170,6 @@
         </a>
       </section>
     </footer>
+  </div>
   </body>
 </html>
